--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   margin: 0;
   font-family: sans-serif;
 }
-
+           
 
 header {
   margin-bottom: 100px;
@@ -37,10 +37,11 @@ header h1 {
   padding-bottom: 20px;
   flex-wrap: wrap;
   margin-right: 10px;
+  margin-left: 10px;
   margin-top: 10px;
 }
 
-.parent li a {
+li a {
   color: #fff;
   text-decoration: none;
 
@@ -57,6 +58,13 @@ header h1 {
   border: 2px solid white;
   border-radius: 10px;
   padding: 5px 10px;
+}
+
+ul{
+    display: flex;
+    justify-content: space-around;
+    color:white;
+    
 }
 
 li {
